# Psx_OpenGl

./: CMakeLists.txt  build.bat
include/: Camera.h  DebugUI.h  Lighting.h  ParticleSystem.h  PlayerController.h  PostProcess.h  Renderer.h  Scene.h  Shader.h  ShaderManager.h  ShadowMap.h  Skybox.h  Texture.h  game.h  model.h
include/editor/: ConsoleWindow.h  ImGuiTheme.h  ObjectInspectorWindow.h  OutlinerWindow.h  PerformanceWindow.h  SceneViewportWindow.h
src/: DebugUI.cpp  main.cpp
src/editor/: ConsoleWindow.cpp  ImGuiTheme.cpp  ObjectInspectorWindow.cpp  OutlinerWindow.cpp  PerformanceWindow.cpp  SceneViewportWindow.cpp
